--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,104 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: YUTAO WU
     - name: Date of Birth
-      value: 14th March 1879
+      value: 21st December 1995
     - name: Languages
-      value: English, German
+      value: English, Chinese 
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Master of Data Science
+      institution: Deakin University, Melbourne, Australia
+      year: 2020 - 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Achieved HD average (83.75)
+        - SIT742 Modern Data Hall of Fame (Top student in this unit and presented coding skills to other master students)
+        - 2022 International Student Representative in School of Information Technology Promotion Project
+        # - title: Description 3.
+        #   contents:
+        #     - Sub-description 1.
+        #     - Sub-description 2.
+    - title: B. Sc Mathematics and Applied Mathematics
+      institution: Chongqing Technology and Business University, Chongqing, China
+      year: 2014 - 2019
       description:
-        - Description 1.
-        - Description 2.
+        - Achieved GPA 72.50
+        - Thesis:Practical Applications of Eigenvectors in Linear Algebra
 
-- title: Experience
+- title: Research Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Minor thesis
+      institution: Deakin University, Melbourne, Australia
+      year: 03/2020 - 03/2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - The Interpretability of SHAP value and LIME on COVID-19 Fake News Detection
+        - Created a multilingual COVID-19 fake news dataset and analyzed news features, such as COVID-19 news keywords and the distribution of languages used
+        - Built up a decision support system as a warning mechanism for COVID-19 fake news via computational-based machine learning
+        - Improved public trust in machine learning methods for COVID-19 fake news detection
+        # - title: Description 3.
+        #   contents:
+        #     - Sub-description 1.
+        #     - Sub-description 2.
+    - title: Research Fellow - Multilingual COVID-19 Fake News Detection and Intervention
+      institution: Deakin University, Melbourne, Australia
+      year: 11/2021 - 10/2022
       description:
-        - Description 1.
-        - Description 2.
+        - Multilingual COVID-19 Fake News Detection and Intervention, collaborating with Gadjah Mada University, sponsored by Study Melbourne Partnership
+        - Developed project websites and built a web portal of fact-checking service to debunk COVID-19 misinformation
+        - Conducted theoretical analysis of the existing fake news detection models, and design a multilingual COVID-19 fake news detection model using advanced machine learning techniques
+        - Collaborating with two papers in the project on the topic of fake news (Publication under review)
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Casual Research Assistant - Multi-Objective Optimization Problems
+      institution: Deakin University, Melbourne, Australia
+      year: 04/2021 - 12/2021
       description:
+        - Preparing numerous test problems by python:Function Objectives, Function constraints, Variable domain
+        - Preparing EA algorithms by python, such as NSGA II
+        - Testing algorithms on problems from the test problem list to modify and extend variable dimensions. Visualizing results:objective space, Pareto-front, nadir point etc. Employing IGD+ and Hypervolume to analyse result files
+        - Building machine language pipeline. Multi-objective optimization problems calculated in Python environment, created by bash scripts and evaluated by combined C++ and Python
+ 
+    # - title: Professor of Theoretical Physics
+    #   institution: Karl-Ferdinand University, Prague, Czechoslovakia
+    #   year: 1911 - 1917
+    #   description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+# - title: Honors and Awards
+#   type: time_table
+#   contents:
+#     - year: 1921
+#       items: 
+#         - Nobel Prize in Physics 
+#         - Matteucci Medal
+#     - year: 2029
+#       items: 
+#         - Max Planck Medal
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
