--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Blog # blog_name will be displayed in your blog page
-blog_nav_title: blog #blog # your blog must have a title for it to be displayed in the nav bar
+blog_nav_title: Blog #blog # your blog must have a title for it to be displayed in the nav bar
 blog_description: Share some insights on the learning journey and always remember to ask yourself some questions. 
 permalink: /blog/:year/:title/
 
