--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,25 @@ related_blog_posts:
   enabled: true
   max_related: 5
 
+# Giscus comments (RECOMMENDED)
+# Follow instructions on https://giscus.app/ to setup for your repo to fill out
+# the information below.
+giscus:
+  repo: wuyoscar/wuyoscar.github.io     # <your-github-user-name>/<your-github-repo-name>
+  repo_id: 
+  category: Comments             # name of the category under which discussions will be created
+  category_id: DIC_kwDOA5PmLc4CTBt6
+  mapping: title                 # identify discussions by post title
+  strict: 1                      # use strict identification mode
+  reactions_enabled: 1           # enable (1) or disable (0) emoji reactions
+  input_position: bottom         # whether to display input form below (bottom) or above (top) the comments
+  theme: preferred_color_scheme  # name of the color scheme (preferred works well with al-folio light/dark mode)
+  emit_metadata: 0
+  lang: en
+
+# Disqus comments (DEPRECATED)
+disqus_shortname:  # put your disqus shortname
+# https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 
 # External sources.
@@ -157,7 +176,7 @@ collections:
     permalink: /projects/:path/
 
 news:
-  enabled: true
+  enabled: false
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: 5 # leave blank to include all the news in the `_news` folder
 
