--- a/_config.yml
+++ b/_config.yml
@@ -175,8 +175,8 @@ collections:
     output: true
     permalink: /projects/:path/
 
-news:
-  enabled: false
+announcements:
+  enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: 5 # leave blank to include all the news in the `_news` folder
 
